0027192: Improvement of storage of Ocaf document in XML file format

Improvement of code in XmlMDataStd_ExtStringArrayDriver.cxx

Corrected test-script